--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :url %>
-    <%= form.text_field :url, id: :picture_url %>
+    add an image....
+    <%= form.file_field :image %>
   </div>
 
   <div class="actions">
